Fixes z-index of pipeline settings to go underneath global loading modal

--- a/cdap-ui/app/features/hydratorplusplus/toppanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/toppanel.less
@@ -113,7 +113,7 @@ body.theme-cdap {
       position: fixed;
       top: 93px;
       right: 0;
-      z-index: 100001;
+      z-index: 1039;
       > div {
         padding: 20px;
         width: 100%;
